--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,15 @@ test/unit/coverage
 test/e2e/reports
 selenium-debug.log
 server/
+
+### add by eric
+# basic
+*.swp
+*~
+
+# yarn
+yarn.lock
+
+# npm
+package-lock.json
+
